--- a/package.json
+++ b/package.json
@@ -244,6 +244,7 @@
         "i18next": "25.3.2",
         "jsdom": "26.1.0",
         "localforage": "1.10.0",
+        "lodash-es": "4.17.21",
         "migrate-mongo": "12.1.3",
         "mongodb": "6.17.0",
         "mongoose": "8.16.3",
@@ -282,6 +283,7 @@
         "@types/express-useragent": "1.0.5",
         "@types/fs-extra": "11.0.4",
         "@types/graphql-upload": "17.0.0",
+        "@types/lodash-es": "4.17.12",
         "@types/migrate-mongo": "10.0.5",
         "@types/node": "24.0.13",
         "@types/node-persist": "3.1.8",
