--- a/package.json
+++ b/package.json
@@ -206,24 +206,25 @@
         "test:unit": "tsx src/node/cli/index.ts test:unit"
     },
     "dependencies": {
-        "@antfu/eslint-config": "4.16.2",
+        "@antfu/eslint-config": "4.17.0",
         "@apollo/client": "3.13.8",
         "@apollo/client-integration-nextjs": "0.12.2",
-        "@apollo/server": "4.12.2",
-        "@dotenvx/dotenvx": "1.47.5",
+        "@apollo/server": "5.0.0",
+        "@as-integrations/express5": "1.1.2",
+        "@dotenvx/dotenvx": "1.48.0",
         "@eddeee888/gcg-typescript-resolver-files": "0.12.1",
         "@eslint-react/eslint-plugin": "1.52.3",
         "@graphql-codegen/cli": "5.0.7",
         "@graphql-codegen/client-preset": "4.8.3",
-        "@nestjs/common": "11.1.3",
-        "@nestjs/core": "11.1.3",
+        "@nestjs/common": "11.1.5",
+        "@nestjs/core": "11.1.5",
         "@userback/widget": "0.3.11",
-        "@vitejs/plugin-react-swc": "3.10.2",
+        "@vitejs/plugin-react-swc": "3.11.0",
         "apollo-upload-client": "18.0.1",
         "body-parser": "2.2.0",
         "chalk": "5.4.1",
         "clsx": "2.1.1",
-        "compression": "1.8.0",
+        "compression": "1.8.1",
         "consola": "3.4.2",
         "cookie-parser": "1.4.7",
         "cors": "2.8.5",
@@ -233,21 +234,21 @@
         "eslint-plugin-format": "1.0.1",
         "eslint-plugin-react-hooks": "5.2.0",
         "eslint-plugin-react-refresh": "0.4.20",
-        "express": "4.21.2",
-        "express-session": "1.18.1",
+        "express": "5.1.0",
+        "express-session": "1.18.2",
         "express-useragent": "1.0.15",
         "fs-extra": "11.3.0",
         "globals": "16.3.0",
         "graphql": "16.11.0",
         "graphql-upload": "17.0.0",
-        "graphql-ws": "6.0.5",
+        "graphql-ws": "6.0.6",
         "i18next": "25.3.2",
         "jsdom": "26.1.0",
         "localforage": "1.10.0",
         "lodash-es": "4.17.21",
         "migrate-mongo": "12.1.3",
         "mongodb": "6.17.0",
-        "mongoose": "8.16.3",
+        "mongoose": "8.16.4",
         "mongoose-aggregate-paginate-v2": "1.1.4",
         "mongoose-paginate-v2": "1.9.1",
         "next-intl": "4.3.4",
@@ -261,7 +262,7 @@
         "slugify": "1.6.6",
         "unorm": "1.6.0",
         "uuid": "11.1.0",
-        "vite": "7.0.4",
+        "vite": "7.0.5",
         "ws": "8.18.3",
         "yargs": "18.0.0"
     },
@@ -269,7 +270,7 @@
         "@commitlint/cli": "19.8.1",
         "@commitlint/config-conventional": "19.8.1",
         "@eslint/config-inspector": "1.1.0",
-        "@next/eslint-plugin-next": "15.3.5",
+        "@next/eslint-plugin-next": "15.4.1",
         "@testing-library/jest-dom": "6.6.3",
         "@testing-library/react": "16.3.0",
         "@types/apollo-upload-client": "18.0.0",
@@ -278,14 +279,14 @@
         "@types/cookie-parser": "1.4.9",
         "@types/cors": "2.8.19",
         "@types/crypto-js": "4.2.2",
-        "@types/express": "4.17.21",
+        "@types/express": "5.0.3",
         "@types/express-session": "1.18.2",
         "@types/express-useragent": "1.0.5",
         "@types/fs-extra": "11.0.4",
         "@types/graphql-upload": "17.0.0",
         "@types/lodash-es": "4.17.12",
         "@types/migrate-mongo": "10.0.5",
-        "@types/node": "24.0.13",
+        "@types/node": "24.0.14",
         "@types/node-persist": "3.1.8",
         "@types/react": "19.1.8",
         "@types/react-dom": "19.1.6",
@@ -295,7 +296,7 @@
         "@types/yargs": "17.0.33",
         "@vitest/browser": "3.2.4",
         "eslint": "9.31.0",
-        "eslint-config-next": "15.3.5",
+        "eslint-config-next": "15.4.1",
         "glob": "11.0.3",
         "lint-staged": "16.1.2",
         "node-modules-inspector": "1.0.0",
@@ -303,7 +304,7 @@
         "simple-git-hooks": "2.13.0",
         "tsx": "4.20.3",
         "typescript": "5.8.3",
-        "vite": "7.0.4",
+        "vite": "7.0.5",
         "vite-plugin-dts": "4.5.4",
         "vitest": "3.2.4"
     },
