--- a/package.json
+++ b/package.json
@@ -202,6 +202,7 @@
         "lint:inspect": "tsx src/node/cli/index.ts lint:inspect",
         "ready": "tsx src/node/cli/index.ts ready",
         "reset": "tsx src/node/cli/index.ts reset",
+        "test": "run-s test:unit test:e2e",
         "test:e2e": "tsx src/node/cli/index.ts test:e2e",
         "test:unit": "tsx src/node/cli/index.ts test:unit"
     },
@@ -211,7 +212,7 @@
         "@apollo/client-integration-nextjs": "0.12.2",
         "@apollo/server": "5.0.0",
         "@as-integrations/express5": "1.1.2",
-        "@dotenvx/dotenvx": "1.48.1",
+        "@dotenvx/dotenvx": "1.48.2",
         "@eddeee888/gcg-typescript-resolver-files": "0.12.1",
         "@eslint-react/eslint-plugin": "1.52.3",
         "@graphql-codegen/cli": "5.0.7",
@@ -300,6 +301,7 @@
         "glob": "11.0.3",
         "lint-staged": "16.1.2",
         "node-modules-inspector": "1.0.0",
+        "npm-run-all2": "8.0.4",
         "sass": "1.89.2",
         "simple-git-hooks": "2.13.0",
         "tsx": "4.20.3",
