feat: update libs

--- a/renovate.json
+++ b/renovate.json
@@ -7,8 +7,6 @@
         "group:allNonMajor"
     ],
     "ignoreDeps": [
-        "node",
-        "express",
-        "@types/express"
+        "node"
     ]
 }
