--- a/package.json
+++ b/package.json
@@ -208,8 +208,8 @@
     },
     "dependencies": {
         "@antfu/eslint-config": "5.2.1",
-        "@apollo/client": "3.13.9",
-        "@apollo/client-integration-nextjs": "0.12.3",
+        "@apollo/client": "4.0.0",
+        "@apollo/client-integration-nextjs": "0.13.0",
         "@apollo/server": "5.0.0",
         "@as-integrations/express5": "1.1.2",
         "@dotenvx/dotenvx": "1.49.0",
@@ -252,14 +252,15 @@
         "mongoose": "8.17.2",
         "mongoose-aggregate-paginate-v2": "1.1.4",
         "mongoose-paginate-v2": "1.9.1",
-        "next-intl": "4.3.4",
+        "next-intl": "4.3.5",
         "node-fetch": "3.3.2",
         "node-persist": "4.0.4",
         "qs": "6.14.0",
         "react": "19.1.1",
         "react-dom": "19.1.1",
         "react-hot-toast": "2.6.0",
-        "react-i18next": "15.7.0",
+        "react-i18next": "15.7.1",
+        "rxjs": "7.8.2",
         "slugify": "1.6.6",
         "unorm": "1.6.0",
         "uuid": "11.1.0",
