feat: fix apollo-upload-client

--- a/package.json
+++ b/package.json
@@ -221,7 +221,6 @@
         "@nestjs/core": "11.1.6",
         "@userback/widget": "0.3.11",
         "@vitejs/plugin-react-swc": "4.0.1",
-        "apollo-upload-client": "18.0.1",
         "body-parser": "2.2.0",
         "chalk": "5.6.0",
         "clsx": "2.1.1",
@@ -238,6 +237,7 @@
         "express": "5.1.0",
         "express-session": "1.18.2",
         "express-useragent": "1.0.15",
+        "extract-files": "13.0.0",
         "fs-extra": "11.3.1",
         "globals": "16.3.0",
         "graphql": "16.11.0",
@@ -275,7 +275,6 @@
         "@next/eslint-plugin-next": "15.5.0",
         "@testing-library/jest-dom": "6.8.0",
         "@testing-library/react": "16.3.0",
-        "@types/apollo-upload-client": "18.0.0",
         "@types/body-parser": "1.19.6",
         "@types/compression": "1.8.1",
         "@types/cookie-parser": "1.4.9",
@@ -284,6 +283,7 @@
         "@types/express": "5.0.3",
         "@types/express-session": "1.18.2",
         "@types/express-useragent": "1.0.5",
+        "@types/extract-files": "13.0.1",
         "@types/fs-extra": "11.0.4",
         "@types/graphql-upload": "17.0.0",
         "@types/lodash-es": "4.17.12",
