--- a/package.json
+++ b/package.json
@@ -50,6 +50,11 @@
             "import": "./dist/config/vitest/index.js",
             "require": "./dist/config/vitest/index.cjs"
         },
+        "./config/storybook": {
+            "types": "./dist/config/storybook/index.d.ts",
+            "import": "./dist/config/storybook/index.js",
+            "require": "./dist/config/storybook/index.cjs"
+        },
         "./constant": {
             "types": "./dist/constant/index.d.ts",
             "import": "./dist/constant/index.js",
@@ -210,16 +215,16 @@
         "@antfu/eslint-config": "6.2.0",
         "@apollo/client": "4.0.9",
         "@apollo/client-integration-nextjs": "0.14.1",
-        "@apollo/server": "5.1.0",
+        "@apollo/server": "5.2.0",
         "@as-integrations/express5": "1.1.2",
         "@dotenvx/dotenvx": "1.51.1",
-        "@eddeee888/gcg-typescript-resolver-files": "0.14.0",
-        "@eslint-react/eslint-plugin": "2.3.5",
-        "@graphql-codegen/cli": "6.0.2",
-        "@graphql-codegen/client-preset": "5.1.3",
+        "@eddeee888/gcg-typescript-resolver-files": "0.14.1",
+        "@eslint-react/eslint-plugin": "2.3.7",
+        "@graphql-codegen/cli": "6.1.0",
+        "@graphql-codegen/client-preset": "5.2.0",
         "@nestjs/common": "11.1.9",
         "@nestjs/core": "11.1.9",
-        "@userback/widget": "0.3.11",
+        "@userback/widget": "0.3.12",
         "@vitejs/plugin-react-swc": "4.2.2",
         "body-parser": "2.2.0",
         "chalk": "5.6.2",
@@ -243,36 +248,37 @@
         "graphql": "16.12.0",
         "graphql-upload": "17.0.0",
         "graphql-ws": "6.0.6",
-        "i18next": "25.6.2",
+        "i18next": "25.6.3",
         "jsdom": "27.2.0",
         "localforage": "1.10.0",
         "lodash-es": "4.17.21",
         "migrate-mongo": "12.1.3",
         "mongodb": "7.0.0",
-        "mongoose": "8.19.4",
+        "mongoose": "9.0.0",
         "mongoose-aggregate-paginate-v2": "1.1.4",
         "mongoose-paginate-v2": "1.9.1",
-        "next-intl": "4.5.3",
+        "next-intl": "4.5.5",
         "node-fetch": "3.3.2",
-        "node-persist": "4.0.4",
         "qs": "6.14.0",
         "react": "19.2.0",
         "react-dom": "19.2.0",
         "react-hot-toast": "2.6.0",
-        "react-i18next": "16.3.3",
+        "react-i18next": "16.3.5",
         "rxjs": "7.8.2",
         "slugify": "1.6.6",
         "unorm": "1.6.0",
         "uuid": "13.0.0",
-        "vite": "7.2.2",
+        "vite": "7.2.4",
         "ws": "8.18.3",
         "yargs": "18.0.0"
     },
     "devDependencies": {
         "@commitlint/cli": "20.1.0",
         "@commitlint/config-conventional": "20.0.0",
-        "@eslint/config-inspector": "1.3.0",
+        "@eslint/config-inspector": "1.4.2",
         "@next/eslint-plugin-next": "16.0.3",
+        "@storybook/react": "10.0.8",
+        "@storybook/react-vite": "10.0.8",
         "@testing-library/jest-dom": "6.9.1",
         "@testing-library/react": "16.3.0",
         "@types/body-parser": "1.19.6",
@@ -289,26 +295,25 @@
         "@types/lodash-es": "4.17.12",
         "@types/migrate-mongo": "10.0.6",
         "@types/node": "24.10.1",
-        "@types/node-persist": "3.1.8",
-        "@types/react": "19.2.4",
+        "@types/react": "19.2.6",
         "@types/react-dom": "19.2.3",
         "@types/unorm": "1.3.31",
         "@types/ws": "8.18.1",
         "@types/yargs": "17.0.35",
-        "@vitest/browser": "4.0.9",
+        "@vitest/browser": "4.0.13",
         "eslint": "9.39.1",
         "eslint-config-next": "16.0.3",
-        "glob": "11.0.3",
-        "lint-staged": "16.2.6",
+        "glob": "13.0.0",
+        "lint-staged": "16.2.7",
         "node-modules-inspector": "1.2.0",
         "npm-run-all2": "8.0.4",
-        "sass": "1.94.0",
+        "sass": "1.94.2",
         "simple-git-hooks": "2.13.1",
         "tsx": "4.20.6",
         "typescript": "5.9.3",
-        "vite": "7.2.2",
+        "vite": "7.2.4",
         "vite-plugin-dts": "4.5.4",
-        "vitest": "4.0.9"
+        "vitest": "4.0.13"
     },
     "publishConfig": {
         "access": "public",
