--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,5 @@
 {
+    "timezone": "Asia/Ho_Chi_Minh",
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
     "extends": [
         "config:best-practices",
