feat: update workflow

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -19,5 +19,5 @@ jobs:
       - name: Env & Deps
         uses: cyberskill-world/.github/actions/env-deps@main
 
-      - name: Lint & Build
-        uses: cyberskill-world/.github/actions/lint-build@main
+      - name: Lint
+        uses: cyberskill-world/.github/actions/lint@main
