feat: update libs

--- a/package.json
+++ b/package.json
@@ -243,11 +243,11 @@
         "express-useragent": "2.0.2",
         "extract-files": "13.0.0",
         "fs-extra": "11.3.3",
-        "globals": "16.5.0",
+        "globals": "17.0.0",
         "graphql": "16.12.0",
         "graphql-upload": "17.0.0",
         "graphql-ws": "6.0.6",
-        "helmet": "^8.1.0",
+        "helmet": "8.1.0",
         "i18next": "25.7.3",
         "jsdom": "27.4.0",
         "localforage": "1.10.0",
@@ -256,21 +256,21 @@
         "mongoose": "9.1.1",
         "mongoose-aggregate-paginate-v2": "1.1.4",
         "mongoose-paginate-v2": "1.9.1",
-        "next-intl": "4.6.1",
+        "next-intl": "4.7.0",
         "node-fetch": "3.3.2",
         "qs": "6.14.1",
         "react": "19.2.3",
         "react-dom": "19.2.3",
         "react-hot-toast": "2.6.0",
-        "react-i18next": "16.5.0",
+        "react-i18next": "16.5.1",
         "rxjs": "7.8.2",
         "vite": "7.3.0",
         "ws": "8.18.3",
         "yargs": "18.0.0"
     },
     "devDependencies": {
-        "@commitlint/cli": "20.2.0",
-        "@commitlint/config-conventional": "20.2.0",
+        "@commitlint/cli": "20.3.0",
+        "@commitlint/config-conventional": "20.3.0",
         "@eslint/config-inspector": "1.4.2",
         "@next/eslint-plugin-next": "16.1.1",
         "@storybook/react": "10.1.11",
