--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,30 @@ jobs:
       - name: Build
         uses: cyberskill-world/.github/actions/build@main
 
+      - name: Resolve Zombie Tag Conflict
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          echo "🔮 Calculating next version..."
+          DRY_RUN_OUTPUT=$(npx semantic-release --dry-run --branches release 2>&1)
+          NEXT_VERSION=$(echo "$DRY_RUN_OUTPUT" | grep -oP "The next release version is \K[0-9]+\.[0-9]+\.[0-9]+" || true)
+          if [ -z "$NEXT_VERSION" ]; then
+            echo "✅ No release scheduled. Proceeding normally."
+          else
+            echo "🎯 Targeted version: v$NEXT_VERSION"
+            if git ls-remote --exit-code --tags origin "v$NEXT_VERSION" >/dev/null 2>&1; then
+              echo "⚠️ Tag v$NEXT_VERSION exists! Forcing a jump to the next patch version..."
+              git fetch --tags
+              git config user.name "github-actions[bot]"
+              git config user.email "github-actions[bot]@users.noreply.github.com"
+              git commit --allow-empty -m "fix: bump version to resolve tag conflict with v$NEXT_VERSION"
+              echo "🚀 Created empty commit to force version bump. Ready for deployment."
+            else
+              echo "✅ Tag is free. Proceeding..."
+            fi
+          fi
+
       - name: Deploy
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
