--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,20 +37,32 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           echo "🔮 Calculating next version..."
-          DRY_RUN_OUTPUT=$(npx semantic-release --dry-run --branches release 2>&1)
+
+          DRY_RUN_OUTPUT=$(npx semantic-release --dry-run --branches release 2>&1 || true)
+
+          echo "--- Dry Run Output ---"
+          echo "$DRY_RUN_OUTPUT"
+          echo "----------------------"
+
           NEXT_VERSION=$(echo "$DRY_RUN_OUTPUT" | grep -oP "The next release version is \K[0-9]+\.[0-9]+\.[0-9]+" || true)
 
           if [ -z "$NEXT_VERSION" ]; then
-            echo "✅ No release scheduled. Proceeding normally."
+            echo "✅ No release scheduled or version could not be parsed. Proceeding..."
           else
             echo "🎯 Targeted version: v$NEXT_VERSION"
+
             if git ls-remote --exit-code --tags origin "v$NEXT_VERSION" >/dev/null 2>&1; then
               echo "⚠️ Tag v$NEXT_VERSION exists! Forcing a jump to the next patch version..."
+
               git fetch --tags
               git config user.name "github-actions[bot]"
               git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
               git commit --allow-empty -m "feat: bump version to resolve tag conflict with v$NEXT_VERSION"
-              echo "🚀 Created empty commit to force version bump. Ready for deployment."
+
+              git push origin HEAD:release
+
+              echo "🚀 Created and pushed empty commit to force version bump."
             else
               echo "✅ Tag is free. Proceeding..."
             fi
